# forge2

./: .gitignore  AGENTS.md  GEMINI.md  README.md  dev.sh  package.json  tasks.md
.claude/agents/: test-branch-optimizer.md
.github/workflows/: ci.yml
docs/: AGENTS.md
docs/archive/: project_vision.md
forge-app/: .gitignore  README.md  eslint.config.mjs  package.json  proxy.ts  vitest.config.ts
forge-app/__tests__/api/: analyze.test.ts  arxiv.test.ts  papers.test.ts
forge-app/agents/: README.md  models.py  pyproject.toml  requirements.txt  server.py  test_routes.py
forge-app/agents/prompts/: strategist.py
forge-app/app/: globals.css  page.tsx
forge-app/app/api/analyze-competitors/: route.ts
forge-app/app/api/analyze-multi/: route.ts
forge-app/app/api/analyze-saas/: route.ts
forge-app/app/canvas/: page.tsx
forge-app/app/dashboard/: page.tsx
forge-app/components/: AnalysisReport.tsx  BlueprintComparison.tsx  PitchDeckOutline.tsx  SubmitModal.tsx
forge-app/components/canvas/: canvas-helpers.ts  canvas-styles.css
forge-app/lib/: hydrate.ts  parseStreamedJson.ts  supabase.ts  types.ts
forge-app/lib/ai/: forge.ts
forge-app/lib/ingest/: script.ts
forge-app/supabase/: schema.sql  seed.sql
forge-app/supabase/migrations/: 20260303180000_create_opportunities.sql  20260303_create_custom_papers.sql
full-stack-web/app/dashboard/: page.tsx
mcp-server/: README.md
mcp-server/src/: index.ts
streamlit-prototype/: agents.py  app.py  arxiv_search.py  pyproject.toml  requirements.txt  sessions.json  tools.py  utils.py
(+6 files in other folders)
